{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 66,
  "lineage": "69a3ba7f-8aa0-6c8c-db03-c145eb9f2c43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "loylogic_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e5bf31163b950174",
            "domain": "vpc",
            "id": "eipalloc-0be479b9e4da3bcc8",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0121edc7e7489a78a",
            "private_dns": "ip-172-20-10-14.ap-northeast-1.compute.internal",
            "private_ip": "172.20.10.14",
            "public_dns": "ec2-35-74-7-171.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.74.7.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loylogic_private_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca38c7440de1749a",
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:instance/i-07e52e724360098bc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e52e724360098bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pvt",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05fd54148e1f56006",
            "private_dns": "ip-172-20-20-202.ap-northeast-1.compute.internal",
            "private_ip": "172.20.20.202",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8c547ee2dbe1a06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f95a7d43fb9131ff",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c05a6edc3836f459"
            ]
          },
          "dependencies": [
            "aws_key_pair.pvt",
            "aws_security_group.loylogic_private_sg",
            "aws_subnet.loylogic_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loylogic_public_inst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca38c7440de1749a",
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:instance/i-05b24f56754595199",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b24f56754595199",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "creds",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-010715f337d55b6e8",
            "private_dns": "ip-172-20-10-209.ap-northeast-1.compute.internal",
            "private_ip": "172.20.10.209",
            "public_dns": "ec2-54-249-145-90.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.249.145.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a8f2ee19094355b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b45d82bba8554fa",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f63842e14a99b980"
            ]
          },
          "dependencies": [
            "aws_key_pair.creds",
            "aws_security_group.loylogic_public_sg",
            "aws_subnet.loylogic_public",
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "loylogic_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:internet-gateway/igw-0b8d2ab482602028c",
            "id": "igw-0b8d2ab482602028c",
            "owner_id": "951877628252",
            "vpc_id": "vpc-095088df5485c8672"
          },
          "dependencies": [
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "loylogic_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be479b9e4da3bcc8",
            "id": "nat-09552f4bafae53cd6",
            "network_interface_id": "eni-0121edc7e7489a78a",
            "private_ip": "172.20.10.14",
            "public_ip": "35.74.7.171",
            "subnet_id": "subnet-09b45d82bba8554fa"
          },
          "dependencies": [
            "aws_eip.loylogic_eip",
            "aws_subnet.loylogic_public",
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "loylogic_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:route-table/rtb-0e76314bdf1e02d63",
            "id": "rtb-0e76314bdf1e02d63",
            "owner_id": "951877628252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09552f4bafae53cd6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-095088df5485c8672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.loylogic_public",
            "aws_vpc.loylogic_vpc",
            "aws_eip.loylogic_eip",
            "aws_nat_gateway.loylogic_nat_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "loylogic_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:route-table/rtb-0254a3175e19b35ff",
            "id": "rtb-0254a3175e19b35ff",
            "owner_id": "951877628252",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8d2ab482602028c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-095088df5485c8672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loylogic_vpc",
            "aws_internet_gateway.loylogic_igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loylogic_private_binding",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0160a7267ce44878e",
            "route_table_id": "rtb-0e76314bdf1e02d63",
            "subnet_id": "subnet-0f95a7d43fb9131ff"
          },
          "dependencies": [
            "aws_subnet.loylogic_public",
            "aws_vpc.loylogic_vpc",
            "aws_eip.loylogic_eip",
            "aws_nat_gateway.loylogic_nat_gateway",
            "aws_route_table.loylogic_private_rt",
            "aws_subnet.loylogic_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "loylogic_public_binding",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c86b89d5b2a3cc3",
            "route_table_id": "rtb-0254a3175e19b35ff",
            "subnet_id": "subnet-09b45d82bba8554fa"
          },
          "dependencies": [
            "aws_subnet.loylogic_public",
            "aws_vpc.loylogic_vpc",
            "aws_internet_gateway.loylogic_igw",
            "aws_route_table.loylogic_public_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loylogic_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:security-group/sg-0c05a6edc3836f459",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0c05a6edc3836f459",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.20.10.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.20.10.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "loylogic_private_sg",
            "name_prefix": "",
            "owner_id": "951877628252",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095088df5485c8672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loylogic_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:security-group/sg-0f63842e14a99b980",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.20.20.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0f63842e14a99b980",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "loylogic_public_sg",
            "name_prefix": "",
            "owner_id": "951877628252",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095088df5485c8672"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "loylogic_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:subnet/subnet-0f95a7d43fb9131ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.20.20.0/24",
            "id": "subnet-0f95a7d43fb9131ff",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951877628252",
            "vpc_id": "vpc-095088df5485c8672"
          },
          "dependencies": [
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "loylogic_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:subnet/subnet-09b45d82bba8554fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-09b45d82bba8554fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "951877628252",
            "vpc_id": "vpc-095088df5485c8672"
          },
          "dependencies": [
            "aws_vpc.loylogic_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "loylogic_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:951877628252:vpc/vpc-095088df5485c8672",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-06fb30794b068fa09",
            "default_route_table_id": "rtb-06bdf8d876cac0672",
            "default_security_group_id": "sg-0f83ebc767078f217",
            "dhcp_options_id": "dopt-46c5d921",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095088df5485c8672",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06bdf8d876cac0672",
            "owner_id": "951877628252"
          }
        }
      ]
    }
  ]
}